2007-12-08  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-mime.c: Added another addrspec test and fixed up some
	exception strings to be a little more helpful.

2007-12-05  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Fixed a bug where explicitly disabling largefile
	support would add -D_FILE_OFFSET_BITS=no to the compiler
	CFLAGS. Also added a blaring WARNING when -enable-largefile is
	passed.

2007-11-23  Jeffrey Stedfast  <fejj@novell.com>

	Attempt at solving bug #498720 for address fields, altho it should
	probably be made to handle folding single addresses in the case
	where they are too long to fit within a single line.

	* gmime/internet-address.c (internet_address_list_fold): New
	function.

	* gmime/gmime-message.c (write_structured): Renamed from
	write_addrspec().
	(write_addrspec): New header writer that writes
	InternetAddressLists in a nicely folded manner.

2007-11-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (internet_address_destroy): No need to
	check if ia !=NULL, we know this is true already.

2007-11-12  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.11

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): Fix for
	bug #485005.

2007-11-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (rfc2047_decode_word): If the charset string
	is empty, default to decode_8bit() and don't try to iconv_open()
	it.

2007-11-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (is_rfc2047_token): Don't assume the charset
	component of the token is >= 1 char, start checking for a '?' at
	string index 2.

2007-11-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Clear any
	error we may have (bad passwd?) each pass so that we don't try to
	set an error when one is already set.

2007-10-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (g_mime_message_set_mime_part): Reset the