@@ -1,5 +1,14 @@
 2007-12-08  Jeffrey Stedfast  <fejj@novell.com>
 
+	Fixes bug #498720
+
+	* gmime/internet-address.c (internet_address_list_writer): Renamed
+	from the temporary internet_address_list_fold() name.
+	(_internet_address_to_string): New internal function that writes
+	an InternetAddress to a GString, doing proper folding and rfc2047
+	encoding if requested.
+	(internet_address_to_string): Use the new internal function.
+
 	* tests/test-mime.c: Added another addrspec test and fixed up some
 	exception strings to be a little more helpful.
 
